// Produced by Acceleo JavaScript Generator 1.1.2
/* eslint-disable max-len, "DV6 TBC_CNES generated file" */
/* eslint-disable global-require, "DV6 TBC_CNES generated file" */
// const { register } = require('../../protobuf');

/* register(__dirname, 'isis', {
  ackRequest: require('./ackRequest'),
  ccsds_mc: require('./ccsds_mc'),
  ccsds_mc_aggregation: require('./ccsds_mc_aggregation'),
  computedEvent: require('./computedEvent'),
  execution: require('./execution'),
  file: require('./file'),
  logbookEvent: require('./logbookEvent'),
  opAlert: require('./opAlert'),
  operationParameter: require('./operationParameter'),
  tcHistory: require('./tcHistory'),
  userEvent: require('./userEvent'),
}); */
module.exports = {
  ackRequest: require('./ackRequest'),
  ccsds_mc: require('./ccsds_mc'),
  ccsds_mc_aggregation: require('./ccsds_mc_aggregation'),
  computedEvent: require('./computedEvent'),
  execution: require('./execution'),
  file: require('./file'),
  logbookEvent: require('./logbookEvent'),
  opAlert: require('./opAlert'),
  operationParameter: require('./operationParameter'),
  tcHistory: require('./tcHistory'),
  userEvent: require('./userEvent'),
};
